<resources>
    <!--    core    -->
    <string name="app_name">Pixionary</string>
    <string name="progress_count">%1$d / </string>
    <!--    alert   -->
    <string name="accept">확인</string>
    <string name="save">저장</string>
    <string name="error_failed_to_save_image">이미지 저장에 실패했습니다. 다시 시도해주세요.</string>
    <!--    alert    -->
    <string name="unsynchronized_alert_title">동기화 되지 않은 이미지가 있습니다.\n 동기화 하시겠습니까?</string>
    <string name="confirm">확인</string>
    <string name="dismiss">취소</string>
    <!--    home / general    -->
    <string name="toggle_option">문서 검색</string>
    <string name="search_general_hint">찾고싶은 이미지를 검색해 보세요.</string>
    <string name="search_general_title">이미지를 찾아드릴게요!</string>
    <string name="search_general_description">
        언제 찍었는지 모를 이미지를 찾고싶으신가요?
        \n묘사해주시면 갤러리에서 찾아드릴게요!
    </string>
    <string name="search_general_progress_title">이미지들을 분석중입니다…</string>
    <string name="extracting_progress_complete">"모든 사진 동기화 완료!"</string>

    <!--    home / doc      -->
    <string name="search_document_hint">찾고싶은 문서를 검색해 보세요.</string>
    <string name="search_document_title">문서를 찾아드릴게요!</string>
    <string name="search_document_description">
        입력하신 문자열이 포함된 문서를 찾아드릴게요.
        \n서랍을 열어 문서정리를 해보세요!
    </string>
    <string name="recognizing_text_alert">현재 이미지를 분석중입니다…</string>
    <string name="recognize_text_failure">이미지에서 글자를 찾을 수 없습니다. 다시 시도해주세요.</string>

</resources>